; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwi/extr_if_iwi.c_iwi_suspend.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwi/extr_if_iwi.c_iwi_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwi_softc = type { %struct.ieee80211com }
%struct.ieee80211com = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @iwi_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwi_suspend(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.iwi_softc*, align 8
  %4 = alloca %struct.ieee80211com*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.iwi_softc* @device_get_softc(i32 %5)
  store %struct.iwi_softc* %6, %struct.iwi_softc** %3, align 8
  %7 = load %struct.iwi_softc*, %struct.iwi_softc** %3, align 8
  %8 = getelementptr inbounds %struct.iwi_softc, %struct.iwi_softc* %7, i32 0, i32 0
  store %struct.ieee80211com* %8, %struct.ieee80211com** %4, align 8
  %9 = load %struct.ieee80211com*, %struct.ieee80211com** %4, align 8
  %10 = call i32 @ieee80211_suspend_all(%struct.ieee80211com* %9)
  ret i32 0
}

declare dso_local %struct.iwi_softc* @device_get_softc(i32) #1

declare dso_local i32 @ieee80211_suspend_all(%struct.ieee80211com*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
